--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
 name: multi-docker
-
 on:
   push:
     branches:
       - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,10 +16,10 @@ jobs:
         docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
     - name: before install
       run: |
-        docker build -t maroofshaikh09/multi-client-10-14  ./client
-        docker build -t maroofshaikh09/multi-nginx-10-14  ./nginx
-        docker build -t maroofshaikh09/multi-server-10-14 ./server
-        docker build -t maroofshaikh09/multi-worker-10-14 ./worker
+        docker build -t maroofshaikh09/multi-client-10-14 -f ./client/Dockerfile.dev ./client
+        docker build -t maroofshaikh09/multi-nginx-10-14 -f ./nginx/Dockerfile.dev ./nginx
+        docker build -t maroofshaikh09/multi-server-10-14 -f ./server/Dockerfile.dev ./server
+        docker build -t maroofshaikh09/multi-worker-10-14 -f ./worker/Dockerfile.dev ./worker
     - name: script
       run: |
         docker run -e CI=true maroofshaikh09/multi-client npm test
@@ -29,7 +27,7 @@ jobs:
         docker run -e CI=true maroofshaikh09/multi-worker npm test
     - name: after install
       run: |
-        docker push maroofshaikh09/multi-client-10-14
+        docker push maroofshaikh09/multi-client-10-14 
         docker push maroofshaikh09/multi-nginx-10-14
         docker push maroofshaikh09/multi-server-10-14
         docker push maroofshaikh09/multi-worker-10-14
