--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,52 +1,31 @@
 version: '3'
 services:
-  postgres:
-    image: 'postgres:latest'
-    environment:
-      - POSTGRES_PASSWORD= postgres_password
-  redis:
-    image: 'redis:latest'
-  nginx:
-    depends_on:
-      - api
-      - client
-    restart: always
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./nginx
-    ports:
-      - '3050:80'
-  api:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./server
-    volumes:
-      - /app/node_modules
-      - ./server:/app
-    environment:
-      - REDIS_HOST= redis
-      - REDIS_PORT= 6379
-      - PGUSER= postgres
-      - PGHOST= postgres
-      - PGDATABASE= postgres
-      - PGPASSWORD= postgres_password
-      - PGPORT= 5432
-  client:
-    environment:
-      - WDS_SOCKET_PORT=0
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./client
-    volumes:
-      - /app/node_modules
-      - ./client:/app
-  worker:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./worker
-    volumes:
-      - /app/node_modules
-      - ./worker:/app
-    environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
+    client:
+        image: "maroofshaikh09/multi-client-10-14"
+        hostname: client
+        mem_limit: 128m
+    server:
+        image: "maroofshaikh09/multi-server-10-14"
+        hostname: api
+        mem_limit: 128m
+        environment:
+          - REDIS_HOST= $REDIS_HOST
+          - REDIS_PORT= $REDIS_PORT
+          - PGUSER= $PGUSER
+          - PGHOST= $PGHOST
+          - PGDATABASE= $PGDATABASE
+          - PGPASSWORD= $PASSWORD
+          - PGPORT= $PGPORT
+    worker:
+        image: "maroofshaikh09/multi-worker-10-14"
+        hostname: worker
+        mem_limit: 128m
+        environment: 
+          - REDIS_HOST= $REDIS_HOST
+          - REDIS_PORT= $ REDIS_PORT
+    nginx:
+        image: "maroofshaikh09/multi-nginx-10-14",
+        hostname: nginx
+        mem_limit: 128m
+        ports:
+            - "80:80"
