--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
     client:
         image: "maroofshaikh09/multi-client-10-14"
@@ -9,20 +9,20 @@ services:
         hostname: api
         mem_limit: 128m
         environment:
-          - REDIS_HOST= $REDIS_HOST
-          - REDIS_PORT= $REDIS_PORT
-          - PGUSER= $PGUSER
-          - PGHOST= $PGHOST
-          - PGDATABASE= $PGDATABASE
-          - PGPASSWORD= $PASSWORD
-          - PGPORT= $PGPORT
+          - REDIS_HOST= multi-docker-redis.4g3mnx.ng.0001.use1.cache.amazonaws.com
+          - REDIS_PORT= 6379
+          - PGUSER= postgres
+          - PGHOST= multi-docker-postgres.c7gaftw1xtmb.us-east-1.rds.amazonaws.com
+          - PGDATABASE= fibvalues
+          - PGPASSWORD= postgrespassword
+          - PGPORT= 5432
     worker:
         image: "maroofshaikh09/multi-worker-10-14"
         hostname: worker
         mem_limit: 128m
         environment: 
-          - REDIS_HOST= $REDIS_HOST
-          - REDIS_PORT= $ REDIS_PORT
+          - REDIS_HOST= multi-docker-redis.4g3mnx.ng.0001.use1.cache.amazonaws.com:6379
+          - REDIS_PORT= 6379
     nginx:
         image: "maroofshaikh09/multi-nginx-10-14",
         hostname: nginx
